# ESP32-IDF-YOLO11

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DEBUG_CHECKLIST.md  PRODUCT_SPEC.md  README.md  partitions.csv  resume_project.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
build_codex_diag/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake  config.env  dashboard.html.S  flash_project_args  flasher_args.json  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  project_description.json  x509_crt_bundle.S
main/: CMakeLists.txt  I2C.c  I2C.h  Kconfig.projbuild  dashboard.html  idf_component.yml  main_app.cpp  yolo_classes.h
main/adc1_shared/: adc1_shared.c  adc1_shared.h
main/blink/: blink.c  blink.h
main/cam/: camera.c  camera.h
main/dht11/: dht11.c  dht11.h
main/http_stream/: http_stream.c  http_stream.h
main/inference_task/: inference_task.cpp  inference_task.hpp
main/led/: led.c  led.h
main/light_sensor/: LightSensor.c  LightSensor.h
main/max471/: MAX471.c  MAX471.h
main/model/: yolo11n_esp32s3.espdl  yolo11n_esp32s3.espdl.bak
main/oled/: oled.c  oled.h
main/sensor_data/: sensor_data.c  sensor_data.h
main/sht20/: SHT20.c  SHT20.h
main/tsl2584/: TSL2584.c  TSL2584.h
main/wifi/: wifi.c  wifi.h  wifi_config.example.h
main/yolo_detect/: yolo_detect.cpp  yolo_detect.hpp
yolov11/: PROJECT_HANDOVER.md  README.roboflow.txt  TRAINING_GUIDE.md  audit_labels.py  data.yaml  deploy_models.py  esp32_2class_model.json  generate_dual_datasets.py  pack_for_cloud.py  pc_inference_server.py  split_dataset.py  (+7 more)
(+2123 files in other folders)
